@@ -298,6 +298,7 @@ MSAASamples =
 DisableDWM = 
 UseNVidiaAPI = 
 HDRDisableToneMapper = 
+HDRGlobalExposure = 
 ForceBloomOff = 
 ForceMotionBlurOff = 
 ForceAnisotropicFiltering = 
@@ -338,8 +339,8 @@ BallTrail =
 BallTrailStrength = 
 
 ; Replace table's scene lighting emission scale setup, eventually based on automatic Day/Night computed from geographic position
-OverrideTableEmissionScale =
-EmissionScale =
+OverrideTableEmissionScale = 
+EmissionScale = 
 DynamicDayNight = 
 Latitude = 
 Longitude = 
